Version 2.0; major modifications to script to make it more readable/maintainable; bug fixes

--- a/style.css
+++ b/style.css
@@ -20,17 +20,18 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 92%;
+    width: 89%;
     height: 20%;
     background-color: rgb(0, 0, 0);
 }
 
 #output {
     background-color: gray;
-    height: 90%;
+    height: 88%;
     width: 96%;
     text-align: right;
-    font-size: 80px;
+    padding-right: 3px;
+    font-size: 75px;
 }
 
 #keys{
@@ -38,7 +39,7 @@
     flex-direction: column;
     background-color: rgb(0, 0, 0);
     border: 4px solid black;
-    width: 90%;
+    width: 87%;
     height: 70%;
 }
 
@@ -72,15 +73,16 @@
 }
 
 .number{
-    font-size: 25px; 
+    font-size: 40px; 
 }
 
 .special{
-    font-size: 25px;
-    background-color: orange;
+    font-size: 40px;
+    background-color: rgb(196, 170, 255);
 }
 
 .operator{
-    font-size: 25px;
-    background-color: rgb(64, 150, 236);
+    font-size: 40px;
+    background-color: rgb(148, 255, 148);
 }
+
